--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Helvetica, sans-serif;
 }
 
 .container {
@@ -17,6 +18,19 @@
     display: table;
     clear: both;
 }
+
+.button {
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    border-radius: 40px;
+    padding: 8px 15px;
+}
+
+.big-button {
+
+}
+
 /*--try--*/
 
 .try {
@@ -30,13 +44,18 @@
 /*--Header--*/
 
 header {
-    background-color: #2547d8;
+    background-color:#255EE9;
     height: 100px;
+    line-height: 100px;
 }
 
 #logo {
     float:left;
     width: 15%;
+}
+
+#logo img {
+    vertical-align: middle;
 }
 
 nav {
@@ -54,17 +73,26 @@ header nav ul li {
 header nav ul li a {
     color: white;
     text-decoration: none;
+    margin: 0px 20px;
+}
+
+header nav ul li a :hover {
+    text-decoration: underline;
 }
 
 #login {
     float: right;
     width: 15%;
+    text-align: right;
 }
 
 /*--Jumbotron--*/
 
 #jumbotron {
-    background-color: aqua;
+    background-image: url(img/jumbo.png);
+    background-size: cover;
+    min-height: 600px;
+    background-position: center;
 }
 
 /*--Main--*/
