--- a/style.css
+++ b/style.css
@@ -7,16 +7,17 @@
 }
 
 .container {
-    height: 100%;
     width: 80%;
     margin: auto;
     max-width: 1180px;
+    border: 2px solid black;
+    height: 100%;
 }
 
-.row::after{
+.container::after {
+    clear: both;
     content:"";
     display: table;
-    clear: both;
 }
 
 .button {
@@ -24,21 +25,33 @@
     color: black;
     text-decoration: none;
     border-radius: 40px;
-    padding: 8px 15px;
+    padding: 8px 16px;
+    display: inline-block;
+}
+
+.button-black {
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    border-radius: 40px;
+    padding: 16px 32px;
 }
 
 .big-button {
-
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    border-radius: 40px;
+    padding: 16px 32px;
 }
 
-/*--try--*/
+.button-blue {
+    background-color:rgb(142, 161, 225);
+    color: white;
+    text-decoration: none;
+    border-radius: 40px;
+    padding: 16px 32px;
 
-.try {
-    height: 500px;
-}
-
-.try .container {
-    border: solid 2px;
 }
 
 /*--Header--*/
@@ -47,11 +60,20 @@ header {
     background-color:#255EE9;
     height: 100px;
     line-height: 100px;
+    width: 100%;
+    margin: auto;
+}
+
+header::after {
+    clear: both;
+    display: block;
+    content: "";
 }
 
 #logo {
     float:left;
-    width: 15%;
+    width: 20%;
+    text-align: right;  
 }
 
 #logo img {
@@ -60,7 +82,8 @@ header {
 
 nav {
     float:left;
-    width: 70%;
+    width: 60%;
+    margin: auto;
 }
 header nav ul {
     text-align: center;
@@ -69,6 +92,7 @@ header nav ul {
 header nav ul li {
     display: inline-block;
 }
+
 
 header nav ul li a {
     color: white;
@@ -82,8 +106,12 @@ header nav ul li a :hover {
 
 #login {
     float: right;
-    width: 15%;
-    text-align: right;
+    width: 20%;
+    text-align: left;
+}
+
+#login .button {
+    display: inline;
 }
 
 /*--Jumbotron--*/
@@ -91,18 +119,102 @@ header nav ul li a :hover {
 #jumbotron {
     background-image: url(img/jumbo.png);
     background-size: cover;
-    min-height: 600px;
+    background-repeat: no-repeat;
+    height: 550px;
     background-position: center;
+    color:white;
+}
+
+#jumbotron .container {
+    max-width: 780px;
+    text-align: center;
+    padding-top: 100px;
+    height: 550px
+}
+
+#jumbotron h1 {
+    margin-bottom: 50px;
+    font-size: 50px;
+} 
+
+#jumbotron p {
+    margin-bottom: 30px;
 }
 
 /*--Main--*/
 
-main {
-    background-color: yellow;
+.row {
+    height: 500px;
+    width: 100%;
+    margin: 50px auto;
 }
+
+.coln-1 {
+    float: left;
+    top: 30px;
+    height: 100%;
+    margin-left: 60px;
+}
+.coln-2  {
+    float: left;
+    width: 300px;
+    margin-left: 60px;
+    margin-top: 3%;
+}
+
+/* last row */
+
+.last-row{
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 150px;
+}
+
+.last-row p {
+    width: 86%;
+    margin-top: 20px;
+    margin-left: 7%;
+}
+
+.last-row h3 {
+    margin-bottom: 30px;
+}
+
 
 /*--Footer--*/
 
 footer {
-    background-color: grey;
+    background-color: rgb(35, 39, 42);
+    height: 600px;
+}
+
+
+.footer-row-big {
+    height: 100%;
+    width: 28%;
+    border: 1px solid white;
+    float: left;
+}
+
+.footer-row {
+    height: 100%;
+    width: 18%;
+    border: 1px solid white;
+    float: left;
+}
+
+.footer-row ul li {
+    list-style: none;
+}
+
+.footer-row ul li a {
+    text-decoration: none;
+    color: white;
+    margin-top: 10px;
+    display: inline-block;
+}
+
+.footer-row h3 {
+    margin-top: 60px;
+    color:#255EE9;
 }
