--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
     width: 80%;
     margin: auto;
     max-width: 1180px;
-    border: 2px solid black;
     height: 100%;
+    position: relative;
 }
 
 .container::after {
@@ -19,6 +19,12 @@
     content:"";
     display: table;
 }
+
+#last{
+    border-bottom:rgb(114, 137, 218) 1px solid;
+    padding-bottom: 5%;
+}
+
 
 .button {
     background-color: white;
@@ -54,6 +60,15 @@
 
 }
 
+.button-blue-small {
+    background-color:rgb(142, 161, 225);
+    color: white;
+    text-decoration: none;
+    border-radius: 40px;
+    padding: 8px 16px;
+
+}
+
 /*--Header--*/
 
 header {
@@ -70,13 +85,13 @@ header::after {
     content: "";
 }
 
-#logo {
+.logo {
     float:left;
     width: 20%;
     text-align: right;  
 }
 
-#logo img {
+.logo img {
     vertical-align: middle;
 }
 
@@ -185,21 +200,19 @@ header nav ul li a :hover {
 
 footer {
     background-color: rgb(35, 39, 42);
-    height: 600px;
+    position: relative;
 }
 
 
 .footer-row-big {
     height: 100%;
     width: 28%;
-    border: 1px solid white;
     float: left;
 }
 
 .footer-row {
     height: 100%;
     width: 18%;
-    border: 1px solid white;
     float: left;
 }
 
@@ -216,5 +229,51 @@ footer {
 
 .footer-row h3 {
     margin-top: 60px;
-    color:#255EE9;
+    color:rgb(114, 137, 218);
+}
+
+.footer-row-big h2 {
+    color:rgb(114, 137, 218);
+    margin-top: 60px;
+    margin-bottom: 20px;
+
+}
+
+.flag {
+    height: 15px;
+}
+
+.footer-row-big span {
+    color: white;
+}
+
+.icons .fab {
+    color: white;
+    margin-top: 20px;
+    margin-right: 20px;
+
+}
+
+.line {
+    width
+    color:lightgrey;
+}
+
+.register {
+    width: 100%;
+    height: 200px;
+    background-color: rgb(35, 39, 42);  
+}
+
+
+#ending-logo {
+    position: absolute;
+    left: 0;
+    top: 50px;
+}
+
+#ending-login {
+    position: absolute;
+    right: 0;
+    top: 50px;
 }
